finalized results component styles

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,2 +1,8 @@
+@import "./variables.scss";
+@import "./mixins.scss";
 @import "./Foundation.scss";
 @import "./Logo.scss";
+@import "./home.scss";
+@import "./searchBar.scss";
+@import "./recentPosts.scss";
+@import "./results.scss";
