--- a/src/style/Foundation.scss
+++ b/src/style/Foundation.scss
@@ -1,3 +1,14 @@
 .post-topic {
   margin: 0 15px;
 }
+html {
+  font-family: "Lato", sans-serif;
+}
+body {
+  font-family: "Lato", sans-serif;
+}
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
