--- a/src/style/Logo.scss
+++ b/src/style/Logo.scss
@@ -1,4 +1,8 @@
+.recent-posts,
 .logo {
+  display: grid;
+  justify-items: center;
+  align-content: center;
   img {
     width: 105px;
     height: 105px;
