--- a/src/style/recentPosts.scss
+++ b/src/style/recentPosts.scss
@@ -10,8 +10,9 @@
     }
     .recent-posts-posts {
       display: grid;
-      justify-content: space-evenly;
-      grid-template-columns: 1fr 1fr 1fr;
+      @media screen and (min-width: 700px) {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
     }
   }
 }
